Fix course sidebar text overlap

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -159,17 +159,17 @@ body.course-item-popup #learn-press-course-curriculum .learn-press-breadcrumb {
 	display: none !important;
 }
 
-#popup-sidebar #learn-press-course-curriculum ul.curriculum-sections .section-content .course-item .course-item-title {
-	max-width: calc(100% - 128px);
-}
+// #popup-sidebar #learn-press-course-curriculum ul.curriculum-sections .section-content .course-item .course-item-title {
+// 	max-width: calc(100% - 128px);
+// }
 
-.course-item-lp_lesson {
-	display: flex !important;
+// .course-item-lp_lesson {
+// 	display: flex !important;
 
-	.course-item-meta {
-		position: relative !important;
-	}
-}
+// 	.course-item-meta {
+// 		position: relative !important;
+// 	}
+// }
 
 .woocommerce-message {
 	border-top: none;
